--- a/css/main.css
+++ b/css/main.css
@@ -1841,7 +1841,7 @@ article:last-child .post-eof {
 }
 .links-of-author a::before,
 .links-of-author span.exturl::before {
-  background: #0dd6ff;
+  background: #b5ffc6;
   border-radius: 50%;
   content: ' ';
   display: inline-block;
